python/testData/inspections/doNotAddFunctionInsideImport/doNotAddFunctionInsideImport.py
import mod.<caret><error descr="No module named 'unresolved'">unresolved</error>
